--- a/views/community-board.html
+++ b/views/community-board.html
@@ -8,7 +8,7 @@
     </div>
 </section>
 <div class = 'container'>
-<section class = 'col-7 offset-3 p-5'>
+<section class = 'col-md-7 col-12 offset-md-3 p-5'>
     <div class = 'lh-lg'>
     {% for i in data %}
 {{i.content  | striptags(true) | escape | nl2br  }}
