--- a/views/index.html
+++ b/views/index.html
@@ -365,11 +365,11 @@ Class name automatically added to element */
     </p>
 
     <div id="filters" class="button-group mb-5">
-      <button class="btn-blue-tab is-checked bg-transparent border-0 mx-3 px-3 is-checked px-3"
+      <button class="btn-blue-tab is-checked bg-transparent border-0 mx-md-3 mx-0 px-md-3  is-checked px-3"
         data-filter="*">All</button>
-      <button class="btn-blue-tab bg-transparent border-0 mx-3 px-3" data-filter=".Investment">Investment</button>
-      <button class="btn-blue-tab bg-transparent border-0 mx-3 px-3" data-filter=".News">News</button>
-      <button class="btn-blue-tab bg-transparent border-0 mx-3 px-3" data-filter=".Team">Team</button>
+      <button class="btn-blue-tab bg-transparent border-0 mx-md-3 mx-0 px-md-3 " data-filter=".Investment">Investment</button>
+      <button class="btn-blue-tab bg-transparent border-0 mx-md-3 mx-0 px-md-3 " data-filter=".News">News</button>
+      <button class="btn-blue-tab bg-transparent border-0 mx-md-3 mx-0 px-md-3 " data-filter=".Team">Team</button>
 
     </div>
     <!-- data-isotope-options='{ "layoutMode": "masonryHorizontal", "itemSelector": ".element-item", "masonryHorizontal": { "rowHeight": ".grid-sizer" } }' -->
