--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,24 +2,50 @@
   width: 100%;
   height: 100%;
 }
+.navicon, .naviconDark{
+  position: absolute;
+  /* height: 100%; */
+  top: -2vh; 
+}
 
+.naviconDark{
+  top:-1vh !important;
+}
+
+.navTopLine{
+ border-top: 1px solid #EEEEEE; 
+}
+
+#shortcut{
+  position: fixed;
+  bottom: 10vh;
+  right: 10vw;
+  z-index:2;
+}
 /* 모바일  */
 @media only screen and (max-width: 992px) {
-
+.navbar-brand{
+  margin-right: 36vw;
+}
   .mobileNav{
     padding: 0;
   }
-
+  #shortcut{
+ right:34vw;
+  }
   .mobileMenu{
     padding: 1rem ;
     border-bottom: 1px solid #EEEEEE;
   }
 
+  .mySwiper1 .card, .q-card{
+    height: auto !important;
+  }
   .home-1{
     padding-left:0;
     padding-right: 0;
   }
-  .Title_1,.Title_2,.Title_2_eng,.Title_3_eng, .Title_3, .Title_1_eng, .Body_1, .Body_1_eng, .Body_2, .Body_2_eng, .cn2Title, .SubTitle_1, .text-c, .c-text-2{
+  .member-Tab,.Title_1,.Title_2,.Title_2_eng,.Title_3_eng, .Title_3, .Title_1_eng, .Body_1, .Body_1_eng, .Body_2, .Body_2_eng, .cn2Title, .SubTitle_1, .text-c, .c-text-2{
     font-size: 1rem !important;
   }
 
@@ -31,6 +57,7 @@
     font-size: 2rem !important;
   } */
 }
+
 
 .w-gnb{
   width: 8vw;
@@ -72,47 +99,6 @@ button.gnbBtn:hover, .gnbBtn:active{
 }
 
 
-.burger {
-  display: flex;
-  outline: none;
-  /* height: 20px; */
-  width: 15px;
-  border: 0px;
-  padding: 0px;
-  background: transparent;
-  transition: all 250ms ease-out;
-  cursor: pointer;
-}
-
-.burger:before, .burger:after {
-  content: '';
-  width: 15px;
-  height: 2px;
-  position: absolute;
-  background: white;
-  transition: all 250ms ease-out;
-  will-change: transform;
-}
-
-.burger:before {
-  transform: translateY(-3px);
-}
-
-.burger:after {
-  transform: translateY(3px);
-}
-
-
-
-.active.burger:before {
-  transform: translateY(0) rotate(45deg);
-}
-
-.active.burger:after {
-  transform: translateY(0) rotate(-45deg);
-} 
-
-
 .swiper-slide {
   /* Center slide text vertically */
   display: -webkit-box;
@@ -151,11 +137,17 @@ html {
   font-family: 'made-tommy' !important;
 }
 
-.lineOn {
+.lineOn{
   display: inline-block;
   position: relative;
   color: white;
 }
+.lineOn2,.lineOn2Dropdown {
+  display: inline-block;
+  position: relative;
+  color: #5A54F5;
+}
+
 
 #moveArrow:hover #myArrow {
   transform: rotate(180deg);
@@ -178,7 +170,37 @@ html {
   transition: transform 0.25s ease-out;
 }
 
-.lineOn:hover:after {
+
+
+.lineOn2:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: -0.9rem;
+  /* top: 120%; */
+  left: 0;
+  background-color: #5A54F5;
+  transform-origin: bottom;
+  transition: transform 0.25s ease-out;
+}
+
+.lineOn2Dropdown:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  /* top: 120%; */
+  left: 0;
+  background-color: #5A54F5;
+  transform-origin: bottom;
+  transition: transform 0.25s ease-out;
+}
+
+.lineOn:hover:after, .lineOn2:hover:after, .lineOn2Dropdown:hover:after {
   transform: scaleX(1);
   transform-origin: bottom center;
 }
