--- a/views/index.html
+++ b/views/index.html
@@ -352,7 +352,7 @@ Class name automatically added to element */
 </div>
 
 
-<div class='isBg-1 card rounded-0 border-0'>
+<div class='isBg-1 card rounded-0 border-0 d-none'>
   <video autoplay muted loop id="myVideo">
     <source src="img/home/2.mp4" type="video/mp4">
   </video>
