--- a/views/company.html
+++ b/views/company.html
@@ -41,12 +41,6 @@ line-height: 150%;
 
 
 
-<!-- <section class="py-5 text-center container-flujid mb-5 bg-dark text-light" style = "height:100vh;">
-  <div style="margin-top: 40vh;" data-aos="fade-up">
- 
-  </div>
-</section>  -->
-
 
 
 <div class='isBg-1 card rounded-0 border-0 masthead'>
@@ -74,19 +68,19 @@ line-height: 150%;
   </div>
   <div class="row mt-5 gx-5 w-100">
     <div class="col-md col-12">
-      <h1 data-aos="fade-up" class="cn2Title Gray_6 mb-md-5 mb-0 aos-init aos-animate">1 st</h1>
+      <h1 data-aos="fade-up" class="cn2Title Gray_6 mb-md-5 mb-0 ">1 st</h1>
       <p class="Gray_4 Body_1 mb-5 mb-md-0">국내 최초 <br>
 
         합성 데이터 활용 기업</p>
     </div>
     <div class="col-md-6 col-12">
-      <h1 data-aos="fade-up" class="cn2Title Gray_6 mb-md-5 mb-0 aos-init aos-animate" data-aos-delay="200">10,000,000 <span><i class="plus icon fs-3"></i></span></h1>
+      <h1 data-aos="fade-up" class="cn2Title Gray_6 mb-md-5 mb-0 " data-aos-delay="200">10,000,000 <span><i class="plus icon fs-3"></i></span></h1>
       <p class="Gray_4 Body_1 mb-5 mb-md-0">합성 데이터를 위해 <br>
         수집한 원천 데이터 수</p>
 
     </div>
     <div class="col-md col-12">
-      <h1 data-aos="fade-up" class="cn2Title Gray_6 mb-md-5 mb-0 aos-init aos-animate" data-aos-delay="400">92 <span><i class="plus icon fs-3"></i></span></h1>
+      <h1 data-aos="fade-up" class="cn2Title Gray_6 mb-md-5 mb-0 " data-aos-delay="400">92 <span><i class="plus icon fs-3"></i></span></h1>
       <p class="Gray_4 Body_1 mb-5 mb-md-0">프로젝트를 위해 보유한 <br>
         AI 모델의 수(2022.2월 기준)
       </p>
@@ -192,7 +186,7 @@ line-height: 150%;
     
     <h5 class = 'subTitle_1 Gray_3 my-3'>Our Leaders</h5>
     <h2 class = 'Gray_1 Title_1 mb-5'>AI의 미래를 그리는 사람들</h2>
-    <div class="row row-cols-md-2 row-cols-1 g-4">
+    <div class="row row-cols-2 g-4">
       {% for s in data %}
      {% if s.category == 'companyLeader' %}
       <div class="card px-3 border-0 col" style="
@@ -395,12 +389,12 @@ line-height: 150%;
         </div>
 
         <div class="row mt-5">
-          <a href = 'mailto:hr_team@cnai.ai' class="col-md-3 Tab Gray_1"><button class="ui button bgGray5 engFont">Contact us</button></a>
+          <a href = 'mailto:contact@cnai.ai' class="col-md-3 Tab Gray_1"><button class="ui button bgGray5 engFont">Contact us</button></a>
           <div class="col-12 col-auto offset-1 Body_1 lh-lg">
             <p>
             <span class="Gray_0" style="
             border-bottom: 2px solid black;
-        ">hr_team@cnai.ai</span>
+        ">contact@cnai.ai</span>
             <span class="Gray_2">문의하기 <i class="angle right icon"></i> </span> <br/>
                  
           유선 번호 <span class = 'Body_1_eng'>Call. 02 2088 1216 </span> <br/>
