--- a/views/base.html
+++ b/views/base.html
@@ -53,9 +53,13 @@
 
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="/img/common/favicon.ico" type="image/x-icon">
-  <link rel="favicon" href="/img/common/favicon.ico" type="image/x-icon">
-
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/common/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/common/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/common/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/img/common/favicon/site.webmanifest">
+  <link rel="mask-icon" href="/img/common/favicon/safari-pinned-tab.svg" color="#ffffff">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="theme-color" content="#ffffff">
   <!-- font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
